--- a/public/css/style.css
+++ b/public/css/style.css
@@ -324,8 +324,8 @@ div.form-group.label-taller {
   width: 100%;
   height: 100px;
   background-color: #1d1d1b;
-  bottom: 0;
-  position: fixed; }
+  clear: both;
+  position: static; }
   .footer a {
     text-decoration: none !important;
     color: white; }
@@ -401,9 +401,6 @@ label {
   font-weight: 300; }
 
 form input:invalid {
-  border: 2px solid red; }
-
-form input:required {
   border: 2px solid red; }
 
 #login {
