--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -330,8 +330,8 @@ div.form-group.label-taller
   width: 100%
   height: 100px
   background-color: #1d1d1b
-  bottom: 0
-  position: fixed
+  clear: both
+  position: static
 
 
 
