--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -30,7 +30,7 @@ h2.title-find
   display: flex
   margin: auto
   margin-bottom: 21px
-  @media screen and (min-width:200px) and (max-width: 535px)
+  @media screen and (min-width:100px) and (max-width: 535px)
     font-size: 15px
     margin-top: -80px
     margin-left: -100px
@@ -49,9 +49,14 @@ h2.title-find
   border-radius: 2px
   color: #062f4a
 label.size-categories
-  @media screen and (min-width:200px) and (max-width: 535px)
+  @media screen and (min-width:100px) and (max-width: 535px)
     font-size: 18px
-    margin-top: -40px !important
+    margin-top: -60px !important
+  @media screen and (min-width:100px) and (max-width: 470px)
+    top: 0px !important
+    margin: 0px auto
+  @media screen and (min-width:435px) and (max-width: 920px)
+    top: 0px !important
   font-size: 22px
 .nav-pills > li
   &[data-slide-to="0"].active a
@@ -66,19 +71,36 @@ label.size-categories
     background-color: #f8af00//#c8b783
 
 #sel1.form-control.form-personal.select-taller
-  @media screen and (min-width:200px) and (max-width: 1250px)
+
+  @media screen and (min-width:100px) and (max-width: 1250px)
     width: 400px
     display: flex
-  @media screen and (min-width:200px) and (max-width: 1118px)
-    margin-left: -20px 
-  @media screen and (min-width:200px) and (max-width: 555px)
-    margin: auto
-    width: 200px  
+  @media screen and (min-width:100px) and (max-width: 1118px)
+    margin-left: 120px
+    width: 300px
+  @media screen and (min-width:100px) and (max-width: 998px)
+    margin-left: 60px
+    width: 300px
+  @media screen and (min-width:100px) and (max-width: 647px)
+    margin-left: 40px
+    width: 270px  
+  @media screen and (min-width:435px) and (max-width: 920px)
+    
+  @media screen and (min-width:100px) and (max-width: 547px)
+    margin-left: 50px
+    width: 200px
+  @media screen and (min-width:100px) and (max-width: 510px)
+    margin-left: 20px
+    width: 170px  
+  @media screen and (min-width:100px) and (max-width: 348px)
+    margin-top: -10px
+    margin-left: 0px
+    width: 170px   
 .label-taller
   font-size: 25px
   top: -50px
 .logo
-  @media screen and (min-width:200px) and (max-width: 535px)
+  @media screen and (min-width:100px) and (max-width: 535px)
     max-width: 90px
     max-height: 50px
   float: left
@@ -95,6 +117,9 @@ label.size-categories
 
 .carousel-inner
   height: 250px
+  @media screen and (min-width:100px) and (max-width: 376px)
+    height: 170px !important
+
 
 .color-blue
   color: #062f4a
@@ -108,7 +133,7 @@ label.size-categories
   a
     text-decoration: none
     color: #062f4a
-  @media screen and (min-width:200px) and (max-width: 725px)
+  @media screen and (min-width:100px) and (max-width: 725px)
     margin-top: 0px 
   margin-top: 45px
   float: right
@@ -118,7 +143,7 @@ label.size-categories
 .center-logo
 
   li
-    @media screen and (min-width:200px) and (max-width: 747px)
+    @media screen and (min-width:100px) and (max-width: 747px)
       font-size: 18px
       
     padding-left: 30px
@@ -156,14 +181,14 @@ label.size-categories
 .font-categories
   font-family: Barrio
 .size-title-categories
-  @media screen and (min-width:200px) and (max-width: 400px)
+  @media screen and (min-width:100px) and (max-width: 400px)
     font-size: 30px
     margin-top: -20px
   font-size: 50px
   margin-bottom: 30px
 
 p.media
-  @media screen and (min-width:200px) and (max-width: 400px)
+  @media screen and (min-width:100px) and (max-width: 400px)
     font-size: 20px 
     width: 200px
 div.form-group.label-taller
@@ -187,9 +212,9 @@ div.form-group.label-taller
   margin-top: 10px
 
 .welcome
-  @media screen and (min-width:200px) and (max-width: 400px)
+  @media screen and (min-width:100px) and (max-width: 400px)
     font-size: 20px
-    margin-top: 0px !important
+    margin-top: -28px !important
 
   font-size: 40px
   color: #062f4a
@@ -200,7 +225,7 @@ div.form-group.label-taller
     transition: 2s
 .navbar
   
-  @media screen and (min-width:200px) and (max-width: 535px)
+  @media screen and (min-width:100px) and (max-width: 535px)
     max-height: 90px
   margin-bottom: 0px !important
 
@@ -331,7 +356,8 @@ div.form-group.label-taller
   height: 100px
   background-color: #1d1d1b
   clear: both
-  position: static
+  position: relative
+  
 
 
 
