--- a/views/login-register.pug
+++ b/views/login-register.pug
@@ -14,7 +14,7 @@ block content
 						.row
 							.col-lg-12
 								form#login-form(action='/acount', method='post', role='form', style='display: block;')
-									h2.font-categories LOGIN
+									h2.font-categories LOGIIN
 									.form-group
 										input#username.form-control(type='text', name='username',placeholder='Username', value='')
 									.form-group
