--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -117,10 +117,19 @@ label.size-categories
 
 .carousel-inner
   height: 250px
-  @media screen and (min-width:100px) and (max-width: 376px)
+  @media screen and (min-width:100px) and (max-width: 701px)
+    height: 320px !important
+  @media screen and (min-width:100px) and (max-width: 626px)
+    height: 250px !important
+  @media screen and (min-width:100px) and (max-width: 490px)
+    height: 240px !important
+  @media screen and (min-width:100px) and (max-width: 404px)
+    height: 200px !important
+  @media screen and (min-width:100px) and (max-width: 568px)
     height: 170px !important
-
-
+  @media screen and (min-width:412px) and (max-width: 732px)
+    height: 220px !important
+  
 .color-blue
   color: #062f4a
 .header-mine
@@ -183,7 +192,7 @@ label.size-categories
 .size-title-categories
   @media screen and (min-width:100px) and (max-width: 400px)
     font-size: 30px
-    margin-top: -20px
+    margin-top: -30px
   font-size: 50px
   margin-bottom: 30px
 
