--- a/views/home.pug
+++ b/views/home.pug
@@ -35,15 +35,16 @@ block content
               .carousel-caption
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Formaciones
-                  form(action='/', method='POST')
-                    label.label-taller.size-categories(for='sel1') Selecciona una categoria&nbsp;
-                    i.glyphicon.glyphicon-hand-down(width='70px')
-                    select#sel1.form-control.form-personal.select-taller.col-md-1
-                      option(value='1') Categoria...
-                      option(value='2') Yoga
-                      option(value='3') Ayurveda
-                      option(value='4') Tantra
-                      option(value='5') Trinidad
+                  .col-xs-12  
+                    form(action='/', method='POST')
+                      label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
+                        i.glyphicon.glyphicon-hand-down(width='120px')
+                      select#sel1.form-control.form-personal.select-taller.col-md-1
+                        option(value='1') Categoria...
+                        option(value='2') Yoga
+                        option(value='3') Ayurveda
+                        option(value='4') Tantra
+                        option(value='5') Trinidad
                     
             // End Item
             .item
@@ -51,15 +52,16 @@ block content
               .carousel-caption
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Talleres
-                  form(action='/', method='POST')
-                    label.label-taller.size-categories(for='sel1') Selecciona una categoria&nbsp;
-                    i.glyphicon.glyphicon-hand-down(width='70px')
-                    select#sel1.form-control.form-personal.select-taller.col-md-1
-                      option(value='1') Categoria...
-                      option(value='2') Yoga
-                      option(value='3') Ayurveda
-                      option(value='4') Tantra
-                      option(value='5') Trinidad
+                  .col-xs-12  
+                    form(action='/', method='POST')
+                      label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
+                        i.glyphicon.glyphicon-hand-down(width='120px')
+                      select#sel1.form-control.form-personal.select-taller.col-md-1
+                        option(value='1') Categoria...
+                        option(value='2') Yoga
+                        option(value='3') Ayurveda
+                        option(value='4') Tantra
+                        option(value='5') Trinidad
                     
             // End Item
             .item
@@ -67,26 +69,27 @@ block content
               .carousel-caption
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Conferencias
-                  form(action='/', method='POST')
-                    label.label-taller.size-categories(for='sel1') Selecciona una categoria&nbsp;
-                    i.glyphicon.glyphicon-hand-down(width='70px')
-                    select#sel1.form-control.form-personal.select-taller.col-md-1
-                      option(value='1') Categoria...
-                      option(value='2') Yoga
-                      option(value='3') Ayurveda
-                      option(value='4') Tantra
-                      option(value='5') Trinidad
+                  .col-xs-12  
+                    form(action='/', method='POST')
+                      label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
+                        i.glyphicon.glyphicon-hand-down(width='120px')
+                      select#sel1.form-control.form-personal.select-taller.col-md-1
+                        option(value='1') Categoria...
+                        option(value='2') Yoga
+                        option(value='3') Ayurveda
+                        option(value='4') Tantra
+                        option(value='5') Trinidad
                     
               // End Item
             .item
               img.img-carrusel.img-opac(src='../img/maestros.gif')
               .carousel-caption
-                form
                 .form-group.label-taller.font-retiro
-                  p.text-center.font-categories.size-title-categories Maestros espirituales
-                  form(action='/', method='POST')
-                    label.media(for='sel1') Selecciona una categoria&nbsp;
-                      i.glyphicon.glyphicon-hand-down(width='70px') 
+                  p.text-center.font-categories.size-title-categories Maestros 
+                  .col-xs-12  
+                    form(action='/', method='POST')
+                      label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
+                        i.glyphicon.glyphicon-hand-down(width='120px')
                       select#sel1.form-control.form-personal.select-taller.col-md-1
                         option(value='1') Categoria...
                         option(value='2') Yoga
