responsive pagge allretiros

--- a/public/sass/_maps.sass
+++ b/public/sass/_maps.sass
@@ -9,7 +9,8 @@
   margin-top: -92px
   clear: both
   z-index: 0
-
+  @media screen and (min-width:300px) and (max-width: 991px)
+    display: none
  
   
 .map-events
