--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -13,6 +13,11 @@
   border-right: 0px
   width: 173px
   font-size: 21px
+  @media screen and (min-width:300px) and (max-width: 768px)
+    display: none 
+  @media screen and (min-width:300px) and (max-width: 1024px)
+    margin-top: 79px
+
 body
   padding-top: 20px
   font-family: Lobster Two
@@ -365,8 +370,12 @@ div.form-group.label-taller
   height: 100px
   background-color: #1d1d1b
   clear: both
-  position: relative
-  
+  position: fixed
+  bottom: 0
+  @media screen and (min-width:300px) and (max-width: 700px)
+    position: relative
+  @media screen and (min-width:768px) and (max-width: 1024px)
+    position: fixed
 
 
 
@@ -387,6 +396,9 @@ div.form-group.label-taller
 .copy
   text-decoration: none !important
   color: white
+.responsive
+  display: flex
+  flex-wrap: wrap
 
 // @media screen and (min-width:300px) and (max-width: 535px)
 // // img   
