--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -5,18 +5,18 @@ block content
     
     
       
-    .col-md-6
+    .col-md-6.responsive
       img(src='/img/search.png', width='26px', height='26px').ino 
       input#search.intros( type="text" placeholder="indica el lugar") 
-      h1#title-mine.text-right
+      h1#title-mine.text-right.title-terapies
       .hr-line2
       div.over
        each retiro in retiros
        
         
-          .col-sm-4.col-md-4.events-link
+          .col-md-6.col-lg-4.events-link
             .thumbnail.offer.margins.links.hvr-grow-shadow
-             a.image-a(href='/details/'+ retiro.id)
+             a.image-a.img-responsive(href='/details/'+ retiro.id)
               img(src= retiro.imageUrl, width="201px" height="174px" class="image2")
               
               h2#box.text-center
