--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -65,8 +65,13 @@
 
 .panel-two
   padding-left: 58px 
-  margin-top: -65px
-  padding-right: 15px 
+  margin-top: -164px
+  padding-right: 16px 
+.share
+  padding-left: 58px 
+  margin-top: 4px
+  padding-right: 16px 
+
 .panel-bottom
   padding-left: 44px
   margin-top: -182px
@@ -85,10 +90,12 @@
 #sahre
   padding-left: 126px!important
 .panel-three
-  margin-top: -65px 
+  width: 577px
+  margin-top: -164px 
   margin-right: -90px
-  padding-right: 20px
-  margin-left: -70px
+  padding-right: 0px
+  margin-left: 926px
+  clear: both
 .panel-four 
   margin-top: 270px 
   margin-right: 0px
@@ -190,3 +197,6 @@ hr
 .events-link
   padding: 0px
   margin-top: 0px
+
+.responsive-image
+  margin-top: -47px
