--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -8,7 +8,7 @@ block content
     .col-md-6.responsive
       img(src='/img/search.png', width='26px', height='26px').ino 
       input#search.intros( type="text" placeholder="indica el lugar") 
-      h1#title-mine.text-right.title-terapies
+      h1#title-mine.title-terapies
       .hr-line2
       div.over
        each retiro in retiros
