in progress page details responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -977,12 +977,12 @@ body {
   padding-left: 126px !important; }
 
 .panel-three {
-  width: 577px;
+  float: right;
+  width: 781px;
   margin-top: -164px;
   margin-right: -90px;
-  padding-right: 0px;
-  margin-left: 926px;
-  clear: both; }
+  padding-right: 204px;
+  margin-left: 926px; }
 
 .panel-four {
   margin-top: 270px;
@@ -1086,6 +1086,12 @@ hr {
 
 .responsive-image {
   margin-top: -47px; }
+
+#ubic {
+  float: right;
+  margin-top: -124px;
+  width: 573px;
+  margin-right: 92px; }
 
 .social-cont {
   border-style: solid;
