--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -90,12 +90,13 @@
 #sahre
   padding-left: 126px!important
 .panel-three
-  width: 577px
+  float: right
+  width: 781px
   margin-top: -164px 
   margin-right: -90px
-  padding-right: 0px
+  padding-right: 204px
   margin-left: 926px
-  clear: both
+  
 .panel-four 
   margin-top: 270px 
   margin-right: 0px
@@ -107,7 +108,7 @@
   margin-right: 0px
   padding-right: 20px
   margin-left: 890px
-
+  
 .panel-body
 
   background-color: #f8f8f8
@@ -200,3 +201,8 @@ hr
 
 .responsive-image
   margin-top: -47px
+#ubic
+  float: right
+  margin-top: -124px
+  width: 573px
+  margin-right: 92px
