--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -50,8 +50,8 @@ block content
           .panel-heading.text-center Descripci&oacute;n
           .panel-body
             p.margin-text #{retiros.description}
-
-    .col-sm-12.col-md-5.panel-three
+  .row
+    .col-sm-12.col-md-7.panel-three
       
         .panel.panel-yellow
           .panel-heading.text-center Compartir
@@ -81,7 +81,7 @@ block content
                       
  
     .panel-four
-      .panel-two.social
+      .social
         .panel.panel-yellow.text-center.c#ubic
           .panel-heading.text-center Ubicación
           .panel-body.my-panel.social.bottom-map
